--- a/mywebsite/css/scratchstyles.css
+++ b/mywebsite/css/scratchstyles.css
@@ -64,11 +64,12 @@ body {
 }
 
 .top-right-links a {
+    position: fixed;
   display: block;
   margin-bottom: 10px;
   color: #0077b6;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .top-right-links a:hover {
